For #6581: fix alignment of label/help/hint elements

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1659,6 +1659,13 @@ body.orbeon {
                     }
                 }
 
+                .fr-grid-head .fr-grid-th {
+                    .xforms-label, .xforms-help, .xforms-hint {
+                        // Keep labels, etc. aligned with fields in repetitions
+                        margin-left: @densityMarginLeftRight;
+                    }
+                }
+
                 .fr-grid-body {
                     grid-gap: 0px
                 }
